<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreenDialog" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_config"
        style="@android:style/TextAppearance.Widget.TextView"/>
    <View android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#EEEEEE"
        android:layout_marginBottom="5dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_screens" />

    <SeekBar
        android:id="@+id/number_of_screens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_screen"
         />

    <Spinner
        android:id="@+id/default_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/number_of_screen"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_you_want_to_add" />

    <CheckBox
        android:id="@+id/acitivies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acitivies" />

    <CheckBox
        android:id="@+id/widgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget" />

</LinearLayout>